--- a/frontend/src/components/Dashboard/CSS/dashCreatePart.css
+++ b/frontend/src/components/Dashboard/CSS/dashCreatePart.css
@@ -1,9 +1,11 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400&family=Syne:wght@400;500;600;700&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: poppins;
+    font-family: 'Poppins', sans-serif;
     text-decoration: none;
 }
 
@@ -12,44 +14,114 @@
 .dashCreatePart{
     width: 100%;
     height: 100vh;
-    background-color: rgb(248, 248, 253);
-    padding: 100px;
-    padding-top: 150px;
-    padding-left: 230px;
-    
+    background-color: white;
+    color: black;
+    padding: 50px 25%;
+    padding-top: 100px; 
 }
 
 .dashCreatePart h2{
     font-size: 20px;
     font-weight: 400;
+    color: white;
 }
 
 .dashCreateformDiv{
-    display: grid;
-    grid-template-columns: 2fr 500px;
-    gap: 50px;
     align-items: top;
     padding-top: 50px;
 }
 
-.formDivOne{
-    background-color: white;
-    padding: 50px 70px;
-    border-radius: 30px;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+
+.myBtn{
+    margin-left: 70px;
+    width: 20%;
+    padding: 0;
 }
 
+@media only screen and (min-width:321px) and (max-width:768px){
+    .dashCreatePart{
+        padding: 70px 5%;
+    }
+
+    .myBtn{
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
+/* ================ image part ================= */
+
+.formDivTwo{
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+    border: gainsboro 2px dashed;
+    text-align: center;
+}
+
+.formDivTwo input{
+    border: none;
+    margin: auto;
+    width: 40%;
+}
+
+.formDivTwo label{
+    padding: 0;
+}
+
+
+.formDivTwo i{
+    font-size: 40px;
+    font-weight: 300;
+    color: rgb(196, 196, 196);
+    padding: 0;
+}
+
+.formDivTwo p{
+    text-align: center;
+    font-size: 13px;
+    color: black;
+    padding: 0;
+}
+
+.formDivTwo span{
+    font-size: 13px;
+    color: rgb(237, 157, 59);
+}
+
+@media only screen and (min-width:321px) and (max-width:768px){
+    .formDivTwo input{
+        width: 100%;
+    }
+}
+
+
+/* ================ form input part ================= */
+
+.formDivOne{
+    color: black;
+    padding: 10px 70px;
+    border-radius: 30px;
+}
+
+
+.inputOne label{
+    color: black;
+}
 
 .inputOne input{
     padding: 20px 15px;
     width: 100%;
     border-radius: 10px;
+    background-color: white;
+    color: black;
+    border: gainsboro solid 1px;
 }
 
 .inputOne input[type="text"]:focus {
     border: none;
-    box-shadow: rgb(133, 2, 255) 0 0 2px 0;
-    background-color: white;
+    box-shadow: rgb(49, 72, 93) 0 0 2px 0;
+    /* background-color: white; */
 }
 
 
@@ -57,29 +129,35 @@
     padding: 30px;
     min-width: 100%;
     max-width: 100%;
-    max-height: 300px;
-    min-height: 200px;
-    border: rgb(221, 221, 221) solid 1px;
+    max-height: 200px;
+    min-height: 100px;
+    background-color: white;
     border-radius: 10px;
     outline: none;
+    border: gainsboro solid 1px;
+    color: black;
+    margin: 0;
+}
+
+.inputTwo label{
+    color: black;
 }
 
 
 .myCategory{
-
+    color: black;
 }
 
 #mySelect {
     appearance: none; 
-    /* Remove default arrow in some browsers */
     width: 100%;
     padding: 15px;
-    border: 1px solid #ccc;
     border-radius: 4px;
-    background-color: #fff;
+    background-color: white;
     font-size: 16px;
-    color: #333;
+    color: black;
     margin-top: 10px;
+    border: gainsboro solid 1px;
 }
 
 
@@ -94,58 +172,14 @@ optgroup{
 }
   
 option {
-    background-color: #fff;
-    color: #333;
+    background-color: ghostwhite;
+    color: black;
     font-size: 13px;
 }
 
-
-
-
-
-
-.formDivTwo{
-    background-color: white;
-    padding: 50px;
-    padding-top: 150px;
-    border-radius: 30px;
-    text-align: center;
-    justify-content: center;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+@media only screen and (min-width:321px) and (max-width:768px){
+    .formDivOne{
+        padding: 10px;
+    }
 }
 
-.formDivTwo input{
-    border: none;
-    text-align: center;
-    justify-content: center;
-    margin: auto;
-    display: flex;
-    width: 70%;
-    margin-top: 30px;
-}
-
-.formDivTwo img{
-    width: 40%;
-    margin-bottom: 20px;
-}
-
-.formDivTwo p{
-    font-size: 13px;
-}
-
-
-.formDivTwo span{
-    font-size: 13px;
-    color: rgb(237, 157, 59);
-}
-
-.dashCreateDiv{
-    position: relative;
-}
-
-.myBtn{
-    position: absolute;
-    top: -50px;
-    right: 0;
-    width: 10%;
-}
