--- a/frontend/src/components/Dashboard/CSS/topbar.css
+++ b/frontend/src/components/Dashboard/CSS/topbar.css
@@ -9,14 +9,20 @@
 
 /* ======================== topBarSection =============== */
 
+
+.topIcons{
+    display: none;
+}
+
 .topBarSection{
     background-color: white;
+    color: black;
     width: 100%;
     margin-left: 100px;
     display: grid;
-    grid-template-columns: 2fr 300px;
+    grid-template-columns: 2fr 2fr;
     position: fixed;
-    padding: 15px 5%;
+    padding: 15px 10%;
     margin: auto;
     justify-content: center;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -31,10 +37,25 @@
 }
 
 
-.inputSection i{
-    font-size: 25px;
+.inputSection img{
+    width: 30px;
     cursor: pointer;
 }
+
+.dashLinks {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.dashLinks li{
+    display: inline-block;
+    margin-right: 20px;
+    font-size: 14px;
+    cursor: pointer;
+    color: black;
+}
+
 
 
 .form{
@@ -84,6 +105,90 @@
     font-size: 30px;
 }
 
-.proSection img{
-    width: 40px;
+.dashLinks img{
+    width: 30px;
+}
+
+.proSection button{
+    background-color: white;
+    color: black;
+}
+
+
+@media only screen and (min-width:321px) and (max-width:768px){
+
+    .topIcons{
+        display: block;
+        color:black;
+        font-size: 20px;
+    }
+
+    .dashLinks{
+        background-color: var(--black-color) ;
+        color: white;
+        display: block;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 80px;
+        left: -100%;
+        bottom: 0;
+        padding-left: 30px;
+        padding-top: 60px;
+    }
+
+    .dashLinks li{
+        display: block;
+        color: white;
+        padding-bottom: 30px;
+        font-size: 16px;
+    }
+
+    .inputSection input{
+        padding: 15px 50px;
+        width: 100%;
+        border: none;
+        background-color: rgb(248, 248, 253);
+    }
+
+    .topBarSection{
+        display: flex;
+        padding: 10px 5%;
+        gap: 30px;
+        align-items: center;
+    }
+
+    .proSection{
+        display: flex;
+        gap: 0;
+    }
+
+
+    .open{
+        left: 0;
+        transition: all 0.5s ease;
+    }
+
+    .close{
+        left: -100%;
+        transition: all 0.5s ease;
+    }
+
+    .mysearchIcon{
+        position: absolute;
+        top: 20px;
+        left: 35px;
+        font-size: 13px;
+        border-right: solid 1px rgb(214, 214, 214);
+        padding-right: 10px;
+    }
+
+    .newIcons{
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        font-size: 30px;
+        color: white;
+    }
+
 }
