--- a/frontend/src/components/HeaderCompo/Header.css
+++ b/frontend/src/components/HeaderCompo/Header.css
@@ -1,10 +1,12 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400&family=Syne:wght@400;500;600;700&display=swap');
+
 
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: poppins;
+    font-family: 'Poppins', sans-serif;
 }
 
 :root{
@@ -114,9 +116,6 @@ body{
     width: 100px;
 }
 
-.nav-ul{
-
-}
 
 .nav-ul li{
     display: inline-block;
