--- a/frontend/src/components/HomeCompo/SectionOne.css
+++ b/frontend/src/components/HomeCompo/SectionOne.css
@@ -1,8 +1,12 @@
+
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400&family=Syne:wght@400;500;600;700&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: poppins;
+    font-family: 'Poppins', sans-serif;
 }
 
 :root{
@@ -174,9 +178,22 @@
 /* ========================== media Queries ================================================================= */
 
 @media only screen and (min-width:321px) and (max-width:768px){
+
+    .loginMessage1{
+        position: absolute;
+        top: 100px;
+        left: 30px;
+        font-size: 12px;
+        z-index: 3;
+        color:black;
+        background-color: #f6f6fd;
+        padding: 10px 10px;
+        width: 60%;
+    }
+
     .sectionOne{
-        padding-top: 250px;
-        height: 90vh;
+        padding-top: 50px;
+        height: 80vh;
     }
     .sectionOne::before{
         background-image: none;
