--- a/frontend/src/components/HomeCompo/SectionTwo.css
+++ b/frontend/src/components/HomeCompo/SectionTwo.css
@@ -1,8 +1,13 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400&family=Syne:wght@400;500;600;700&display=swap');
+
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: poppins;
+    font-family: 'Poppins', sans-serif;
 }
 
 :root{
@@ -46,6 +51,12 @@
     background-color: var(--gre-color);
     margin-top: 50px;
     padding: 50px 8%;
+}
+
+@media only screen and (min-width:321px) and (max-width:768px){
+    .SectionTow{
+        margin-top: 10px;
+    }
 }
 
 
