--- a/frontend/src/components/Dashboard/CSS/dashCreatePart.css
+++ b/frontend/src/components/Dashboard/CSS/dashCreatePart.css
@@ -9,6 +9,17 @@
     text-decoration: none;
 }
 
+.loginMessage{
+    position: absolute;
+    top: 120px;
+    right: 100px;
+    font-size: 15px;
+    z-index: 3;
+    color:black;
+    background-color: #e2e2f7;
+    padding: 10px 20px;
+}
+
 
 
 .dashCreatePart{
